--- a/ru/theme/css/main.css
+++ b/ru/theme/css/main.css
@@ -141,18 +141,7 @@ summary {
   display: block
 }
 
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section,
-summary {
+article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary {
   display: block
 }
 
@@ -200,7 +189,7 @@ a {
 }
 
 html {
-  background: #252525 url('../images/line-tile.png?1395516324') top left
+  background: #121212 url('../images/line-tile.png?1395516324') top left
 }
 
 body>div {
